--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,23 @@
-.main {
-  &--nav-active {
-    width: calc(100vw - 220px);
+article {
+  max-height: 100vh;
+	overflow-y: scroll;
+  // scroll-snap-type: mandatory;
+  // scroll-snap-points-y: repeat(300px);
+  scroll-snap-type: y mandatory;
+
+  section, footer {
+    scroll-snap-align: start;
+
+    box-sizing: border-box;
+    padding: 1px;
+    width: 100%;
+    height: 100vh;
   }
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
