--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,7 @@
+@import './mixins.scss';
+
 body {
+  @include grey-background--1;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
