--- a/src/components/section.scss
+++ b/src/components/section.scss
@@ -1,10 +1,21 @@
 .section {
   &__container {
+    position: relative;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100%;
+    // margin-left: auto;
+    // margin-right: auto;
+    &--justify-start {
+      justify-content: flex-start;
+    }
+    &--align-start {
+      align-items: flex-start;
+      text-align: left;
+    }
   }
 }
