--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,145 @@
 @import './mixins.scss';
+@import './variables.scss';
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-Thin.otf');
+  font-weight: 100;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-ThinItalic.otf');
+  font-weight: 100;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-UltraLight.otf');
+  font-weight: 200;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-UltraLightItalic.otf');
+  font-weight: 200;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-Light.otf');
+  font-weight: 300;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-LightItalic.otf');
+  font-weight: 300;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-Regular.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-RegularItalic.otf');
+  font-weight: normal;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-Medium.otf');
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-MediumItalic.otf');
+  font-weight: 400;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-SemiBold.otf');
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-SemiBoldItalic.otf');
+  font-weight: 500;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-Bold.otf');
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-BoldItalic.otf');
+  font-weight: 600;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-ExtraBold.otf');
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-ExtraBoldItalic.otf');
+  font-weight: 700;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-Black.otf');
+  font-weight: 800;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-BlackItalic.otf');
+  font-weight: 800;
+  font-style: italic;
+}
+
+/**/
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-Heavy.otf');
+  font-weight: 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Gilroy';
+  src: url('./fonts/Gilroy/Gilroy-HeavyItalic.otf');
+  font-weight: 900;
+  font-style: italic;
+}
 
 body {
   @include pattern-three($grey-color);
