--- a/src/pages/launch.scss
+++ b/src/pages/launch.scss
@@ -2,6 +2,11 @@
 @import '../variables.scss';
 @import '../animations.scss';
 
+ul, ul li { transition: all 0.2s ease-in-out 0.05s; cursor: grab; }
+ul:hover { transform: scale(1.1); }
+ul:hover li { transform: translateX(1em); opacity: 0.6; }
+ul li:hover { transform: translateX(0); opacity: 1; }
+
 .heart {
   display: inline-block;
   position: relative;
